# Thin-aerofoil-theory

./: NACAfoils.py  README.md  ThinAerofoilTheory.py  setup.cfg
src/thinaerofoils/: __init__.py  examples.py  inviscidanalysis.py
