[metadata]
name = thinaerofoils-yaseen157
version = 0.0.1
author = Yaseen Reza
author_email = yaseen605@gmail.com
description = Basic implementation of "Thin aerofoil" theory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yaseen157/Thin-aerofoil-theory
project_urls =
    Bug Tracker = https://github.com/yaseen157/Thin-aerofoil-theory/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src